--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.7.2
   flutter_easyloading: ^3.0.5
   google_fonts: ^6.2.1
+  syncfusion_flutter_pdfviewer: ^29.1.37
 
 dev_dependencies:
   flutter_test:
