--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   google_fonts: ^6.2.1
   syncfusion_flutter_pdfviewer: ^29.1.37
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
     - assets/home/
     - assets/image/
     - assets/notes/
+    - assets/activity/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
