--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   syncfusion_flutter_pdfviewer: ^29.1.37
   youtube_player_flutter: ^9.1.1
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
